[project]
name = "cozy_spoke"
description = "Example node communicating between ComfyUI Javascript and Python."
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/cozy-comfyui/cozy_spoke"

[tool.comfy]
PublisherId = "amorano"
DisplayName = "cozy_spoke"
Icon = ""
